# FP

./: .gitignore  CMakeLists.txt  README.md  build_fp.sh  build_pyfp.sh  setup.py
FP/: DESCRIPTION  NAMESPACE
FP/R/: fp.R  opt_export.R
FP/demo/: fp_demo.R
FP/man/: FP-package.Rd  Opt.Rd
FP/src/: Makevars  RcppExports.cpp  rcpp_opt.cpp
include/: fp_eigen.h  fp_opt.h
include/piqp/: common.hpp  piqp.hpp  results.hpp  settings.hpp  solver.hpp  solver.tpp
include/piqp/dense/: data.hpp  data.tpp  fast_llt.hpp  kkt.hpp  kkt.tpp  ldlt_no_pivot.hpp  ldlt_no_pivot.tpp  model.hpp  preconditioner.hpp  preconditioner.tpp
include/piqp/sparse/: data.hpp  data.tpp  kkt.hpp  kkt.tpp  kkt_all_eliminated.hpp  kkt_eq_eliminated.hpp  kkt_full.hpp  kkt_ineq_eliminated.hpp  ldlt.hpp  ldlt.tpp  model.hpp  ordering.hpp  ordering.tpp  preconditioner.hpp  preconditioner.tpp  utils.hpp
include/piqp/utils/: filesystem.hpp  io_utils.hpp  optional.hpp  random_utils.hpp
pyfp/: CMakeLists.txt  PyFp.cpp  demo.py
src/: CMakeLists.txt
src/example/: CMakeLists.txt  cpp_dense_example.cpp  cpp_sparse_example.cpp  opt_barra.cpp  opt_barra1.cpp  opt_barra_sharpe.cpp  opt_barra_te.cpp  opt_constrained.cpp  opt_example.cpp  soft_constrained.cpp
src/fp/: CMakeLists.txt  fp_barra.cpp  fp_barra1.cpp  fp_barra_max_sharpe.cpp  fp_barra_te.cpp  fp_constrained.cpp  fp_eigen.cpp  fp_min_var.cpp  fp_opt.cpp  fp_soft_constrained.cpp
src/perf/: perf.cpp
src/piqp/: CMakeLists.txt  index.md  solver.cpp
src/piqp/dense/: data.cpp  kkt.cpp  ldlt_no_pivot.cpp  preconditioner.cpp
src/piqp/sparse/: data.cpp  kkt.cpp  ldlt.cpp  ordering.cpp  preconditioner.cpp
src/test/: CMakeLists.txt  catch_main.cpp  test1.cpp  test_constrained.cpp  test_soft_constrained.cpp
