add_subdirectory(piqp)
add_subdirectory(fp)
add_subdirectory(example)
add_subdirectory(test)
add_subdirectory(perf)

file(GLOB FPOPT_SOURCES "piqp/*.cpp" "piqp/*/*.cpp" "fp/*.cpp")
add_library(fpopt STATIC ${FPOPT_SOURCES})
target_link_libraries(fpopt ${OpenMP_CXX_LIBRARIES} pthread rt)
set_property(TARGET fpopt PROPERTY POSITION_INDEPENDENT_CODE ON)
install(TARGETS fpopt LIBRARY DESTINATION lib)